--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,174 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+html,
+body {
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+
+header {
+  max-width: 2048px;
+  margin: auto;
+}
+header .main-container {
+  width: 100%;
+  height: 50px;
+  background-color: #000;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+header .main-container .logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 30px;
+  transition: all 0.3s;
+}
+header .main-container .logo a {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+}
+header .main-container .logo:hover {
+  transform: translateY(-5px);
+}
+header .main-container .group_right {
+  display: flex;
+  justify-content: space-between;
+}
+header .main-container .group_right a,
+header .main-container .group_right .item_login {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+header .main-container .group_right a {
+  text-decoration: none;
+  color: #fff;
+}
+header .main-container .group_right a .cart {
+  margin-right: 20px;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  transition: all 0.3s;
+}
+header .main-container .group_right a .cart .img,
+header .main-container .group_right a .cart .number_cart {
+  width: 31px;
+  height: 31px;
+}
+header .main-container .group_right a .cart .img img {
+  display: block;
+  width: 100%;
+}
+header .main-container .group_right a .cart .number_cart .number {
+  display: inline-block;
+  font-size: 30px;
+  line-height: 31px;
+}
+header .main-container .group_right a .cart:hover {
+  transform: translateY(-5px);
+  cursor: pointer;
+}
+header .main-container .group_right .item_login .login,
+header .main-container .group_right .item_login .register {
+  margin-right: 20px;
+}
+
+.feature {
+  max-width: 2048px;
+  margin: auto;
+  text-align: center;
+  background: #fffcfc;
+}
+.feature .title_feature {
+  color: #000;
+  font-size: 40px;
+  font-weight: 400;
+}
+.feature .product_feature {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.feature .product_feature .product_container .product_items .products {
+  background: #fff;
+  border-radius: 16px;
+}
+.feature .product_feature .product_container .product_items .products .product_top .img {
+  width: 276px;
+  height: 276px;
+  margin: auto;
+}
+.feature .product_feature .product_container .product_items .products .product_top .img img {
+  width: 100%;
+  border-radius: 16px 16px 0 0;
+}
+.feature .product_feature .product_container .product_items .products .product_top .product_name {
+  text-align: left;
+  color: #000;
+  font-size: 24px;
+  margin-left: 23px;
+}
+.feature .product_feature .product_container .product_items .products .product_top .product_desc {
+  text-align: left;
+  color: #cbc9c9;
+  font-size: 20px;
+  margin-left: 23px;
+  display: -webkit-box; /* Added property */
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.feature .product_feature .product_container .product_items .products .product_bottom {
+  display: flex;
+  justify-content: space-around;
+}
+.feature .product_feature .product_container .product_items .products .product_bottom .button_buy {
+  width: 50%;
+}
+.feature .product_feature .product_container .product_items .products .product_bottom .button_buy button {
+  width: 100%;
+  height: 64px;
+  background: #e1b067;
+  border: none;
+}
+.feature .product_feature .product_container .product_items .products .product_bottom .button_buy button:hover {
+  border: 1px solid white;
+  box-shadow: #e1b067 0px 5px 15px;
+  border-radius: 5px;
+  color: white;
+}
+.feature .product_feature .product_container .product_items .products .product_bottom .price {
+  width: 50%;
+  position: relative;
+}
+.feature .product_feature .product_container .product_items .products .product_bottom .price span {
+  color: #000;
+  font-size: 24px;
+  font-weight: 600;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.feature .product_feature .product_container .product_items:hover {
+  box-shadow: 6px 6px 12px #e2ebfc, -6px -6px 12px #fff;
+  border-radius: 16px;
+}
+
+.cart-body .cart_container .cart_title {
+  margin: 49px 0;
+}
+.cart-body .cart_container .cart_title h1 {
+  display: inline-block;
+}
