--- a/customer/view/cart.html
+++ b/customer/view/cart.html
@@ -20,6 +20,7 @@
     <header>
         <div class="main-container">
             <div class="logo"><a href="../../index.html">Home</a></div>
+            <div><a href="/DOHUYNHTHANHHUY_ANHTAI_BC71_Baitap_Capstone_api/admin/view/admin.html" style="color: aliceblue;">Admin</a></div>
             <div class="group_right">
                 <a href="#">
                     <div class="cart">
