--- a/admin/view/Home.html
+++ b/admin/view/Home.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="/index.html" 
+              <a class="nav-link" href="https://huydo1311.github.io/DOHUYNHTHANHHUY_ANHTAI_BC71_Baitap_Capstone_api/" 
                 ><i class="fa fa-home" aria-hidden="true">Home</i></i><span class="sr-only">(current)</span></a
               >
             </li>
